Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-27285

[autotest] tst_QVector::outOfMemory is crashing

XMLWordPrintable

    • 403b15488b3d687bc2830099f075a5ad12f0ef5f

      This test is crashing (QFATAL) on:

      Windows 7 and Ubuntu 11.10 with error:

      ********* Start testing of tst_QVector *********
      Config: Using QTest library 5.0.0, Qt 5.0.0
      PASS   : tst_QVector::initTestCase()
      QFATAL : tst_QVector::outOfMemory() ASSERT: "alloc <
      tools\qbytearray.cpp, line 73
      FAIL!  : tst_QVector::outOfMemory() Received a fatal
      Unknown file(0) : failure location
      Totals: 1 passed, 1 failed, 0 skipped
      ********* Finished testing of tst_QVector *********
      

      And Mac 10.6 with error:
      Received a signal 11

      The problem occurs line 1753 a.resize(N);

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            stromme Christian
            carochao Caroline Chao (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes